--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -74,7 +74,7 @@
 
             </div>
             <div class="hero-img">
-                <img src="./assets/img/IMG_20231002_233708-removebg-preview.png" alt="Aysha-Fathima image">
+                <img src="./assets/img/octocat.png" alt="Aysha-Fathima image">
             </div>
         </section>
         <!-- service section -->
